Time: 2 ms (43.06%), Space: 44.1 MB (97.33%) - LeetHub